# campus-trade

./: .dockerignore  .gitignore  .jjignore  Dockerfile  README.md
.github/workflows/: docker-build.yml
backend/: Cargo.toml
backend/src/: db.rs  handlers.rs  main.rs  models.rs  queries.rs  routes.rs
docs/: dev-plan.md  security.md  项目说明.docx
docs/prd/: data.md
frontend/: index.html  package.json  pnpm-lock.yaml
frontend/src/: App.vue  env.d.ts  main.ts
frontend/src/router/: index.ts
frontend/src/views/: Home.vue  Items.vue  Orders.vue  Queries.vue  Users.vue
